# 3sem_24

./: .gitignore  CMakeLists.txt  README.md  file_to_send.txt  my_shell.c  run_task_1.sh  run_task_2.sh  run_task_3.sh  run_task_4.sh  run_task_6.sh  teor_vopr.md
UsoltsevI/task1/: CMakeLists.txt  tast1.md  uso-terminal.c
UsoltsevI/task1/cmd-runner-lib/: CMakeLists.txt  cmd-runner.h
UsoltsevI/task1/cmd-runner-lib/include/: cmd-parser.h  string-char.h
UsoltsevI/task1/cmd-runner-lib/source/: cmd-parser.c  cmd-runner.c  string-char.c
UsoltsevI/task2/: CMakeLists.txt  bigpipe.c  bigpipe.h  main.c  task2.md
UsoltsevI/task3/: CMakeLists.txt  main.c  task3.md
UsoltsevI/task3/config/: config.h
UsoltsevI/task3/include/: buf-size.h  define-check-condition-ret.h  fifo.h  message-queues.h  shared-memory.h  str-to-size-t.h
UsoltsevI/task3/source/: fifo.c  message-queues.c  shared-memory.c  str-to-size-t.c
UsoltsevI/task4/: CMakeLists.txt  main.c  task4.md
UsoltsevI/task4/include/: functions.h  monte-carlo.h
UsoltsevI/task4/source/: functions.c  monte-carlo.c
Utkin/task2/: CMakeLists.txt
Utkin/task2/include/: main.h  pipe.h
Utkin/task2/src/: main.c  pipe.c
Utkin/task4/: CMakeLists.txt  readme.md
Utkin/task4/include/: integral.h
Utkin/task4/src/: integral.c  main.c
shlyapin/task1/: .gitignore  CMakeLists.txt
shlyapin/task1/include/: cmd_runner.h  input.h  logger.h  parser.h
shlyapin/task1/src/: cmd_runner.c  input.c  main.c  parser.c
shlyapin/task2/: .gitignore  CMakeLists.txt
shlyapin/task2/include/: data_exchange.h  duplex_pipe.h
shlyapin/task2/src/: data_exchange.c  duplex_pipe.c  main.c
shlyapin/task3/: CMakeLists.txt  README.md  conanfile.txt
shlyapin/task3/include/: config.h  fifo.h  message_queue.h  shared_mem.h  utils.h
shlyapin/task3/src/: fifo.c  main.c  message_queue.c  shared_mem.c  utils.c
shlyapin/task4/: CMakeLists.txt  README.md  conanfile.txt  debug_config.cmake  debug_utils.cmake
shlyapin/task4/include/: config.h  integral.h
shlyapin/task4/src/: integral.c  main.c
shlyapin/task4/test/: CMakeLists.txt  test_integral.c
shlyapin/task6/: CMakeLists.txt  config.h  monoring.c
shlyapin/task6/include/: daemon.h  monitoring.h  utils.h
shlyapin/task6/src/: daemon.c  main.c  monitoring.c  utils.c
task_1/: .gitignore  CMakeLists.txt  Makefile  first_task.c  readme.md  task.md
task_1/examples/: 6_baseline_for_hw.c  a.out  readme.md
task_1/include/: common.h  console.h  exec.h  parser.h
task_1/logging/: CMakeLists.txt
task_1/logging/src/: log.c
task_1/solution/: CMakeLists.txt  README.md  main.c
task_1/solution/Terminal/: .gitignore  CMakeLists.txt  README.md
task_1/solution/Terminal/example/: CMakeLists.txt
task_1/solution/include/: terminal.h
task_1/src/: CMakeLists.txt  common.c  console.c  exec.c  main.c  parser.c  read_cmd.c  run_pipe.c
task_1/src/include/: debug.h  parser.h  read_cmd.h  run_pipe.h
task_2/: CMakeLists.txt  readme.md  second_task.c  task_2.md
task_2/examples/: 1_some_OOP_elements_in_C.c  2_task_2_struct.c  readme.md
task_2/include/: IO_methods.h  IO_settings.h  pipe.h
task_2/solution/: CMakeLists.txt  README.md  main.c
task_2/solution/Full-Duplex/: CMakeLists.txt  README.md
task_2/solution/Full-Duplex/example/: CMakeLists.txt  main.c
task_2/solution/Full-Duplex/include/: full_duplex.h
task_2/solution/Full-Duplex/src/: big_data_tranfer.c  full_duplex.c
task_2/solution/Full-Duplex_Pipe/: CMakeLists.txt
task_2/solution/Full-Duplex_Pipe/example/: main.c  (+1 more)
task_2/solution/include/: big_data_transfer.h  full_duplex.h
task_2/solution/src/: full_duplex.c
task_2/src/: CMakeLists.txt  IO_methods.c  channel.c  channel_internal.c  main.c  pipe.c
task_2/src/include/: channel.h  channel_internal.h
task_3/: CMakeLists.txt  TIME.md  shm_overview.md  task.md  third_task_fifo.c  third_task_q.c  third_task_sh.c
task_3/common/: CMakeLists.txt  common_func.h  file_size.c  timer.c
task_3/cross_proc_com/: CMakeLists.txt  bar.ipynb  readme.md
task_3/cross_proc_com/FIFO_com/: CMakeLists.txt
task_3/cross_proc_com/common/: CMakeLists.txt
task_3/cross_proc_com/msg_com/: CMakeLists.txt
task_3/cross_proc_com/shmem_com/: CMakeLists.txt
task_3/examples/: 0_posix_sem.c
task_3/msg_queues_src/: CMakeLists.txt  main.c  mq_func.c
task_3/msg_queues_src/include/: mq_func.h
task_3/named_pipe_src/: CMakeLists.txt  fifo_func.c  main.c
task_3/named_pipe_src/include/: fifo_func.h
task_3/shared_memory_src/: CMakeLists.txt  main.c  shared_memory_func.c
task_3/shared_memory_src/include/: shared_mem_func.h
task_3/solution/: CMakeLists.txt  FIFO_main.c  README.md  msg_main.c  shmem_main.c
task_3/solution/utils/: CMakeLists.txt
task_4/process_results/: CMakeLists.txt  main.c  process_results.c
task_4/process_results/include/: process_results.h
task_4/solution/: CMakeLists.txt  graph_gen.py  main.c  script.sh
task_4/solution/data/: results.csv
task_4/solution/include/: integrator.h
task_4/solution/src/: integrator.c
task_4/src/: CMakeLists.txt  integral_calc.c  main.c  math_funcs.c  send_results.c  thread_func.c  timer.c
task_4/src/include/: integral_calc.h  math_funcs.h  send_results.h  thread_funcs.h  timer.h
task_6/src/: CMakeLists.txt  change_tmp_dir.c  config_changing_funcs.c  config_structure.c  daemon.c  execute_option.c  file_copying.c  find_file_diff.c  functional_part.c  functional_process.c  inotify_func.c  interactive_interface.c  interactive_mode.c  interface_commands.c  interface_process.c  main.c  memory_watcher.c  open_pid_maps.c  parameters_changing.c  parse_options.c  parse_standard_config.c  sig_handlers.c  tmp_dir_str.c
task_6/src/include/: change_tmp_dir.h  config_changing_funcs.h  config_structure.h  deamon.h  debugging.h  file_copying.h  find_file_diff.h  functional_part.h  inotify_func.h  interacrtive_interface.h  interactive_mode.h  interface_commands.h  interface_process.h  memory_watcher.h  open_pid_maps.h  options.h  parameters_changing.h  parse_standard_config.h  printable_text.h  sig_handlers.h  standart_config.h  tmp_dir_st.h
(+235 files in other folders)
